--- a/templates/targets/targets.html
+++ b/templates/targets/targets.html
@@ -146,7 +146,7 @@
 
                 <div
                     class="mt-4 flex flex-col md:flex-row items-stretch md:items-center md:space-x-3 space-y-3 md:space-y-0 justify-between py-4">
-                    <div class="w-full md:w-1/2">
+                    <div class="w-full md:w-full">
                         <form class="flex items-center">
                             <label for="simple-search" class="sr-only">Search</label>
                             <div class="relative w-full">
@@ -185,7 +185,7 @@
                             </svg>
                         </button>
 
-                        <div class="flex items-center space-x-3 w-full md:w-auto">
+                        <div class="w-full md:w-auto">
                             <button id="actionsDropdownButton" data-dropdown-toggle="actionsDropdown"
                                 class="w-full md:w-auto flex items-center justify-center py-2 px-4 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-primary-700 focus:z-10 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700"
                                 type="button">
