--- a/templates/settings/settings.html
+++ b/templates/settings/settings.html
@@ -143,11 +143,13 @@
                                 </div>
 
                             </div>
-                            <div id="activity-{{ lead.id }}" role="tabpanel"
-                                class="hidden opacity-0 mb-4 block w-full p-6 border border-gray-200 rounded-lg shadow-sm dark:bg-gray-900 dark:border-gray-700">
 
-                                <div class="">
-                                    <h3 class="text-xl font-bold tracking-tight text-gray-900 dark:text-white">Personal
+
+                            <div class="mb-4 hidden" id="activity-{{ lead.id }}" role="tabpanel">
+                                <div
+                                    class="mb-4 p-4 bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-900 dark:border-gray-700">
+                                    <h3 class="text-xl font-bold tracking-tight text-gray-900 dark:text-white">
+                                        Personal
                                         Information</h3>
                                     <p class="mb-6 font-normal text-sm text-gray-700 dark:text-gray-400">Update your
                                         personal details and profile picture.</p>
