--- a/templates/settings/settings.html
+++ b/templates/settings/settings.html
@@ -466,7 +466,7 @@
 
                             <div id="notes-{{ lead.id }}" role="tabpanel"
                                 class="hidden opacity-0 mb-4 block w-full p-6 bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-900 dark:border-gray-700">
-                                <div class="mb-4">
+                                <div class="mb-6">
                                     <h3 class="text-xl font-bold text-gray-900 dark:text-white">Lead Generation
                                         Preferences
                                     </h3>
@@ -513,46 +513,54 @@
 
                                 <!-- Default Hashtags -->
                                 <div class="mb-6">
-                                    <h4 class="font-medium text-gray-900 dark:text-white mb-2">Default Hashtags</h4>
+                                    <h4 class="font-medium text-gray-900 dark:text-white">Default Hashtags</h4>
                                     <p class="text-sm text-gray-700 dark:text-gray-400 mb-3">Add hashtags to target for
                                         lead generation.</p>
-                                    <div class="mb-3 flex flex-wrap gap-2">
-                                        <div
-                                            class="bg-gray-100 dark:bg-gray-700 rounded-md flex items-center px-3 py-1.5 text-sm">
-                                            #realestate
-                                            <button type="button" class="ml-1.5 text-gray-500">×</button>
-                                        </div>
-                                        <div
-                                            class="bg-gray-100 dark:bg-gray-700 rounded-md flex items-center px-3 py-1.5 text-sm">
-                                            #homesearch
-                                            <button type="button" class="ml-1.5 text-gray-500">×</button>
-                                        </div>
-                                        <div
-                                            class="bg-gray-100 dark:bg-gray-700 rounded-md flex items-center px-3 py-1.5 text-sm">
-                                            #realtor
-                                            <button type="button" class="ml-1.5 text-gray-500">×</button>
-                                        </div>
-                                        <div
-                                            class="bg-gray-100 dark:bg-gray-700 rounded-md flex items-center px-3 py-1.5 text-sm">
-                                            #newhome
-                                            <button type="button" class="ml-1.5 text-gray-500">×</button>
-                                        </div>
+                                    <div class="flex flex-wrap gap-2">
+                                        <span id="badge-5"
+                                            class="inline-flex items-center px-2 py-1 me-2 mb-2 text-sm font-medium text-gray-800 bg-gray-100 rounded-sm dark:bg-gray-700 dark:text-gray-300">
+                                            #Twitter
+                                            <button type="button" data-id="5"
+                                                class="remove-hashtag inline-flex items-center p-1 ms-2 text-sm text-gray-400 bg-transparent rounded-xs hover:bg-gray-200 hover:text-gray-900 dark:hover:bg-gray-600 dark:hover:text-gray-300">
+                                                <svg class="w-2 h-2" aria-hidden="true"
+                                                    xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
+                                                    <path stroke="currentColor" stroke-linecap="round"
+                                                        stroke-linejoin="round" stroke-width="2"
+                                                        d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"></path>
+                                                </svg>
+                                                <span class="sr-only">Remove hashtag</span>
+                                            </button>
+                                        </span>
                                     </div>
-                                    <div class="flex">
-                                        <input type="text"
-                                            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-black focus:border-black block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-black dark:focus:border-black">
-                                        <button type="button"
-                                            class="ml-2 p-2.5 text-white bg-gray-50 border border-gray-300 rounded-lg">
-                                            <span class="text-xl text-gray-500">+</span>
+                                    <div class="flex items-center">
+                                        <button id="dropdownSearchButton" data-dropdown-toggle="dropdownSearch"
+                                            data-dropdown-placement="bottom"
+                                            class="mt-2 inline-flex items-center justify-between bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-green-500 focus:border-green-600 w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                                            type="button">
+                                            Add Hashtags
+
                                         </button>
+                                        <button type="submit"
+                                            class="p-2.5 ms-2 mt-2 text-sm font-medium text-white bg-gray-100 rounded-lg border border-gray-300 hover:bg-gray-200 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+
+                                            <svg class="w-5 h-5 text-gray-800 dark:text-white" aria-hidden="true"
+                                                xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"
+                                                viewBox="0 0 24 24">
+                                                <path stroke="currentColor" stroke-linecap="round"
+                                                    stroke-linejoin="round" stroke-width="2" d="M5 12h14m-7 7V5" />
+                                            </svg>
+
+                                            <span class="sr-only">Search</span>
+                                        </button>
+
                                     </div>
                                 </div>
 
                                 <!-- Default Target Pages/Accounts -->
                                 <div class="mb-6">
-                                    <h4 class="font-medium text-gray-900 dark:text-white mb-2">Default Target
+                                    <h4 class="font-medium text-gray-900 dark:text-white">Default Target
                                         Pages/Accounts</h4>
-                                    <p class="text-sm text-gray-700 dark:text-gray-400 mb-3">Enter target accounts for
+                                    <p class="text-sm text-gray-700 dark:text-gray-400 mb-4">Enter target accounts for
                                         lead scraping, separated by commas.</p>
                                     <input type="text" value="@realestate_daily, @luxuryhomes_worldwide"
                                         class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-black focus:border-black block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-black dark:focus:border-black">
@@ -560,9 +568,9 @@
 
                                 <!-- Default Location Keywords -->
                                 <div class="mb-6">
-                                    <h4 class="font-medium text-gray-900 dark:text-white mb-2">Default Location Keywords
+                                    <h4 class="font-medium text-gray-900 dark:text-white">Default Location Keywords
                                     </h4>
-                                    <p class="text-sm text-gray-700 dark:text-gray-400 mb-3">Enter preferred locations,
+                                    <p class="text-sm text-gray-700 dark:text-gray-400 mb-4">Enter preferred locations,
                                         separated by commas.</p>
                                     <input type="text" value="San Francisco, Bay Area, Marin County"
                                         class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-black focus:border-black block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-black dark:focus:border-black">
@@ -570,20 +578,20 @@
 
                                 <!-- Default Engagement Threshold -->
                                 <div class="mb-8">
-                                    <div class="flex justify-between mb-2">
+                                    <div class="flex justify-between">
                                         <h4 class="font-medium text-gray-900 dark:text-white">Default Engagement
                                             Threshold: 65%</h4>
                                     </div>
-                                    <p class="text-sm text-gray-700 dark:text-gray-400 mb-3">Set the minimum engagement
+                                    <p class="text-sm text-gray-700 dark:text-gray-400 mb-4">Set the minimum engagement
                                         level for lead quality.</p>
                                     <div class="relative w-full">
-                                        <input id="engagement-range" type="range" value="65" min="0" max="100"
+                                        <input id="default-range" type="range" value="50"
                                             class="w-full h-2 bg-gray-200 rounded-lg appearance-none cursor-pointer dark:bg-gray-700">
-                                        <div
-                                            class="absolute left-[65%] top-0 transform -translate-x-1/2 -translate-y-1/3">
-                                            <div class="w-4 h-4 bg-white border border-gray-300 rounded-full shadow">
-                                            </div>
-                                        </div>
+
+
+
+
+
                                     </div>
                                     <div class="flex justify-between mt-2 text-sm text-gray-700 dark:text-gray-400">
                                         <span>Lower quality, more leads</span>
